# pySILEnT

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
slam_recognition/: __init__.py  center_surround_tensor.py  color_tensor.py  end_tensor.py  line_end_filter.py  motion_magnitude_filter.py  orientation_filter.py  pyramid_displayer.py  pyramid_filter.py  recognition_testing.py  rgby_filter.py  rgc_filter.py  rotation_invariance_filter.py  spatial_invariance_filter.py  vision_filter.py
slam_recognition/_experimental/: motion_magnitude_filter.py  spatial_invariance_filter.py  vision_filter.py
slam_recognition/attractor_utilities/: log_attractor_function.py
slam_recognition/center_surround_tensor/: center_surround_tensor.py  rgby.py  rgc.py
slam_recognition/constant_convolutions/: __init__.py  contrast_adjust.py  oriented_end_detector.py
slam_recognition/constant_convolutions/center_surround/: __init__.py  center_surround_tensor.py  rgby.py  rgc.py
slam_recognition/edge_tensor/: __init__.py  edge_tensor.py  stripe_tensor.py
slam_recognition/filters/: __init__.py  orientation.py  orientation_filter.py  rgby.py  rgc.py
slam_recognition/regulator_tensor/: __init__.py  gaussian_regulator_tensor.py
slam_recognition/util/: __init__.py  apply_filter.py  centroids.py  get_dimensions.py  index_tensor.py
slam_recognition/zoom_tensor/: __init__.py  from_image.py  to_image_list.py
tests/: test_center_surround_tensors.py  test_index_tensor.py  test_normalize_center_surround.py  test_simplex_coordinates.py
(+33 files in other folders)
